--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@
             <i class="fa-brands fa-twitter"></i>
             Sign in with Twitter
         </a>
+        <p>
+            <a href="#" id="facebook">
+                <i class="fa-brands fa-facebook-f"></i>
+                Sign in with Facebook
+            </a>
+        </p>
     </footer>
 </body>
 </html>
