atualizando css do site

--- a/index.html
+++ b/index.html
@@ -26,12 +26,14 @@
         </form>
     </main>
     <footer>
-        <p>Or Connect With Social Media</p>
-        <a href="#" id="twitter">
-            <i class="fa-brands fa-twitter"></i>
-            Sign in with Twitter
-        </a>
-        <p>
+        <p class="texto">Or Connect With Social Media</p>
+        <p class="social">
+            <a href="#" id="twitter">
+                <i class="fa-brands fa-twitter"></i>
+                Sign in with Twitter
+            </a>
+        </p>
+        <p class="social">
             <a href="#" id="facebook">
                 <i class="fa-brands fa-facebook-f"></i>
                 Sign in with Facebook
